# SOSE_2025_Julius_Mayr

./: .pdm-python  Leistungstest.py  README.md  main.py  pyproject.toml
