[project]
name = "SOSE_2025_Julius_Mayr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "juliusmayr", email = "mj4127@mci4me.at"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
